--- a/Makefile-3
+++ b/Makefile-3
@@ -3,5 +3,5 @@ all: pgm.o	houghBase
 houghBase:	houghBase.cu pgm.o
 	nvcc houghBase.cu pgm.o -o houghBase
 
-pgm.o:	common/pgm.cpp
-	g++ -c common/pgm.cpp -o ./pgm.o
+pgm.o:	pgm.cpp
+	g++ -c pgm.cpp -o ./pgm.o
